[gd_scene load_steps=10 format=2]

[ext_resource path="res://Asset/Pic/bg_common.png" type="Texture" id=1]
[ext_resource path="res://Game/CommonUI/Button/CommonButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Asset/EffectPic/Main.png" type="Texture" id=3]
[ext_resource path="res://Asset/Pic/Button/button_level.png" type="Texture" id=4]
[ext_resource path="res://Asset/Pic/title_main.png" type="Texture" id=5]
[ext_resource path="res://Asset/Pic/icon_setting.png" type="Texture" id=6]
[ext_resource path="res://Game/EntryScene/EntryScene.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "entry_in"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Start:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 264, 826 ), Vector2( 264, 1026 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Level:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.65, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 264, 1165 ), Vector2( 264, 1365 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Setting:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.85, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 504, 1573 ), Vector2( 504, 1700 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Start:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Level:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.65, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Setting:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.85, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "entry_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EntryScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_right = -6.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.13
anchor_top = 0.097
anchor_right = 0.881
anchor_bottom = 0.237
margin_left = 0.272171
margin_top = -0.118759
margin_right = -0.469849
margin_bottom = 0.76123
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.213
anchor_top = 0.374
anchor_bottom = 0.507
margin_left = -0.54599
margin_top = 80.2079
margin_right = 0.463989
margin_bottom = 80.5449

[node name="Level" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.213
anchor_top = 0.528
anchor_bottom = 0.661
margin_left = -0.54599
margin_top = 39.176
margin_right = 0.464111
margin_bottom = 39.512
texture_normal = ExtResource( 4 )

[node name="Setting" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.406
anchor_top = 0.725
anchor_right = 0.613
anchor_bottom = 0.841
margin_left = -0.252014
margin_top = -27.8
margin_right = -0.346191
margin_bottom = -26.9279
texture_normal = ExtResource( 6 )

[node name="Main" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.439216 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/entry_in = SubResource( 1 )
anims/entry_out = SubResource( 2 )
[connection signal="button_down" from="Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Level" to="." method="_on_Level_button_down"]
[connection signal="button_down" from="Setting" to="." method="_on_Setting_button_down"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
